--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "npm": "^7.6.0",
     "randomstring": "^1.1.5",
     "rate-limiter-flexible": "^2.2.1",
+    "swagger-jsdoc": "^6.0.0",
+    "swagger-ui-express": "^4.1.6",
     "url": "^0.11.0"
   },
   "devDependencies": {},
