--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "npm": "^7.6.0",
     "randomstring": "^1.1.5",
     "rate-limiter-flexible": "^2.2.1",
-    "swagger-jsdoc": "^6.0.0",
+    "swagger-jsdoc": "^6.0.8",
     "swagger-ui-express": "^4.1.6",
     "url": "^0.11.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "xxxxx": "^1.0.3"
+  },
   "scripts": {
     "start": "node src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -48,5 +50,6 @@
   "bugs": {
     "url": "https://github.com/bahricanyesil/nodejs-starter-template/issues"
   },
-  "homepage": "https://github.com/bahricanyesil/nodejs-starter-template#readme"
+  "homepage": "https://github.com/bahricanyesil/nodejs-starter-template#readme",
+  "type": "module"
 }
