--- a/package.json
+++ b/package.json
@@ -9,28 +9,24 @@
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "geoip-lite": "^1.4.2",
-    "helmet": "^4.4.1",
-    "i": "^0.3.7",
+    "helmet": "^6.0.1",
     "joi": "^17.4.0",
-    "joi-objectid": "^3.0.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.18",
+    "joi-objectid": "^4.0.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.8.3",
     "morgan": "^1.10.0",
-    "multer": "^1.4.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.5.0",
-    "npm": "^7.6.0",
     "randomstring": "^1.1.5",
     "rate-limiter-flexible": "^2.2.1",
     "swagger-jsdoc": "^6.0.8",
     "swagger-ui-express": "^4.1.6",
     "url": "^0.11.0"
   },
-  "devDependencies": {
-    "xxxxx": "^1.0.3"
-  },
+  "devDependencies": {},
   "scripts": {
     "start": "node src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
