--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "geoip-lite": "^1.4.2",
     "helmet": "^6.0.1",
     "joi": "^17.4.0",
-    "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
     "morgan": "^1.10.0",
@@ -23,8 +22,7 @@
     "randomstring": "^1.1.5",
     "rate-limiter-flexible": "^2.2.1",
     "swagger-jsdoc": "^6.0.8",
-    "swagger-ui-express": "^4.1.6",
-    "url": "^0.11.0"
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {},
   "scripts": {
